Source/WebKit2/NetworkProcess/cache/NetworkCacheIOChannel.h
@@ -60,6 +60,12 @@ public:
 private:
     IOChannel(const String& filePath, IOChannel::Type);
 
+#if USE(SOUP)
+    void read(size_t offset, size_t, std::function<void (Data&, int error)>);
+    void readSync(size_t offset, size_t, std::function<void (Data&, int error)>);
+    void write(size_t offset, const Data&, std::function<void (int error)>);
+#endif
+
     String m_path;
     Type m_type;
 
